<resources>
    <string name="open_app">OpenApp</string>
    <string name="app_name">Permify</string>
    <string name="app_icon">AppIcon</string>
    <string name="action_filter">Filter</string>
    <string name="item_granted">Granted</string>
    <string name="open_source">Open source</string>
    <string name="item_permission">Permission</string>
    <string name="com_test_package">com.test.package</string>
    <string name="image_content_description">ImageIcon</string>
    <string name="item_application_header">Application</string>
    <string name="privacy_and_policy">Privacy and policy</string>
    <string name="item_application_description">Granted %d, Rejected %d</string>
</resources>