<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="Search..."
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/action_filter"
        android:orderInCategory="10"
        android:title="@string/action_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_os"
        android:orderInCategory="101"
        android:title="@string/open_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_policy"
        android:orderInCategory="101"
        android:title="@string/privacy_and_policy"
        app:showAsAction="never" />

</menu>